Disable inheritance propagation for text-align.

The text-align property has an internal value -webkit-match-parent with
a dependency on the parent computed style used in the UA sheet for LI,
which means the independent inheritance optimization won't work.

R=ktyliu@chromium.org,nainar@chromium.org
BUG=716797

Review-Url: https://codereview.chromium.org/2860743004
Cr-Commit-Position: refs/heads/master@{#469609}