third_party/WebKit/Source/core/css/resolver/StyleBuilderCustom.cpp
@@ -455,7 +455,6 @@ void StyleBuilderFunctions::applyValueCSSPropertyTextAlign(
   } else {
     state.Style()->SetTextAlign(state.ParentStyle()->GetTextAlign());
   }
-  state.Style()->SetTextAlignIsInherited(false);
 }
 
 void StyleBuilderFunctions::applyInheritCSSPropertyTextIndent(
